--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,56 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Node modules
+node_modules/
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Runtime data
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory
+coverage/
+
+# Build output
+dist/
+build/
+
+# Dependency directories
+jspm_packages/
+
+# IDEs and editors
+.vscode/
+.idea/
+*.sublime-project
+*.sublime-workspace
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Optional: Parcel, Next.js, Nuxt.js, etc.
+.cache/
+.next/
+out/
+.nuxt/
+
+# Optional: Test coverage
+.nyc_output/
+
+# Optional: TypeScript
+*.tsbuildinfo
+
+# Optional: ESLint cache
+.eslintcache
